--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "tarkhov/guzzle-xml",
-    "description": "Guzzle XML Request.",
-    "keywords": ["guzzle", "symfony", "serializer", "xml", "curl"],
+    "description": "Guzzle XML request and response.",
+    "keywords": ["guzzle", "symfony", "serializer", "xml", "json", "curl", "request", "response"],
     "type": "library",
     "homepage": "https://github.com/tarkhov/guzzle-xml",
     "license": "MIT",
@@ -21,6 +21,11 @@
     "autoload": {
         "psr-4": {
             "GuzzleXml\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "GuzzleXml\\Tests\\": "tests/"
         }
     },
     "require": {
